--- a/SmartExpenseTracker/pom.xml
+++ b/SmartExpenseTracker/pom.xml
@@ -22,6 +22,13 @@
 	</properties>
 
 	<dependencies>
+		<!-- H2 in-memory database for tests -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- Spring Boot Starters -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -121,11 +128,6 @@
 		</dependency>
 
 		<!-- Swagger Dependency-->
-		<dependency>
-			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.2.0</version>
-		</dependency>
 	</dependencies>
 
 	<build>
