--- a/SmartExpenseTracker/pom.xml
+++ b/SmartExpenseTracker/pom.xml
@@ -19,6 +19,7 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>elsamarku</sonar.organization>
 	</properties>
 
 	<dependencies>
